[gd_scene load_steps=6 format=2]

[ext_resource path="res://audio/button_click.mp3" type="AudioStream" id=1]
[ext_resource path="res://audio/main_music.mp3" type="AudioStream" id=2]
[ext_resource path="res://scenes/global_music/global_music.gd" type="Script" id=3]
[ext_resource path="res://audio/House In a Forest Loop.ogg" type="AudioStream" id=4]
[ext_resource path="res://audio/gameover.wav" type="AudioStream" id=5]

[node name="GlobalMusic" type="Node2D"]
script = ExtResource( 3 )

[node name="MainMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="GameMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="ButtonClickTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="ButtonClickTimer" to="." method="_on_ButtonClickTimer_timeout"]
